<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity"
    android:paddingTop="@dimen/padding_top_root_layout"
    android:paddingRight="@dimen/padding_root_layout"
    android:paddingLeft="@dimen/padding_root_layout"
    >

    <TextView
        android:id="@+id/user_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/user_name_text_view"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/user_name_text_view"
        />

    <TextView
        android:id="@+id/pass_word_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_text_view"
        android:text="@string/pass_word_text_view"
        app:layout_constraintEnd_toEndOf="@+id/user_name_text_view"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text" />

    <EditText
        android:id="@+id/pass_word_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_edit_text"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/user_name_text_view"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/pass_word_text_view"
        />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="@dimen/width_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_button"
        android:text="@string/signup_button"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/pass_word_edit_text"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/width_button"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="@+id/user_name_text_view"
        app:layout_constraintTop_toTopOf="@+id/signup_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>