<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity"
    >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity"
    android:padding="@dimen/padding_root_layout">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profile_image_view"
        android:layout_width="@dimen/size_profile_image_view_large"
        android:layout_height="@dimen/size_profile_image_view_large"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_user"
        tools:ignore="VectorDrawableCompat" />


    <TextView
        android:id="@+id/full_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:text="Fullname"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image_view"
        app:layout_constraintStart_toEndOf="@+id/profile_image_view"
        app:layout_constraintTop_toTopOf="@+id/profile_image_view"/>


    <Button
        android:id="@+id/update_image_button"
        style="@style/TextAppearance.AppCompat.Button.HaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/edit_profile_photo"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_view"
        app:layout_constraintStart_toStartOf="@+id/profile_image_view"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_view" />


    <TextView
        android:id="@+id/user_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_top_text_view"
        android:text="@string/user_name_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_image_button" />

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_top_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/user_name_text_view"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/user_name_text_view" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_top_text_view"
        android:text="@string/email_text_view"
        app:layout_constraintEnd_toEndOf="@+id/user_name_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text" />


    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_top_edit_text"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/user_name_text_view"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view" />


    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_button"
        android:text="@string/update_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />


    <Button
        android:id="@+id/delete_button"
        style="@style/TextAppearance.AppCompat.Button.Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="@+id/update_button"
        app:layout_constraintEnd_toStartOf="@+id/update_button"
        app:layout_constraintTop_toTopOf="@+id/update_button" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>